@@ -7,23 +7,32 @@
  * modify it under the terms of the GNU Lesser General Public
  * License as published by the Free Software Foundation version
  * 2.1 of the License.
- *                                                                                 
+ *
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
- *                                                                                 
+ *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
  * END COPYRIGHT BLOCK **/
 package com.netscape.management.client.util;
 
-import java.awt.*;
-import java.util.*;
-import java.awt.event.*;
-import javax.swing.*;
-import com.netscape.management.nmclf.*;
+import java.awt.GridBagConstraints;
+import java.awt.GridBagLayout;
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
+import java.awt.event.FocusEvent;
+import java.awt.event.FocusListener;
+import java.util.Calendar;
+import java.util.GregorianCalendar;
+
+import javax.swing.JComboBox;
+import javax.swing.JPanel;
+import javax.swing.JTextField;
+
+import com.netscape.management.nmclf.SuiConstants;
 
 class DatePicker extends JPanel implements SuiConstants {
     Calendar calendar;
@@ -35,12 +44,12 @@ class DatePicker extends JPanel implements SuiConstants {
     static private final ResourceSet _resource = new ResourceSet("com.netscape.management.client.util.default");
 
     static private final String JANUARY = _resource.getString("DatePicker","January");
-    static private final String FEBRUARY = _resource.getString("DatePicker","February"); 
-    static private final String MARCH = _resource.getString("DatePicker","March"); 
-    static private final String APRIL = _resource.getString("DatePicker","April"); 
+    static private final String FEBRUARY = _resource.getString("DatePicker","February");
+    static private final String MARCH = _resource.getString("DatePicker","March");
+    static private final String APRIL = _resource.getString("DatePicker","April");
     static private final String MAY = _resource.getString("DatePicker","May");
     static private final String JUNE = _resource.getString("DatePicker","June");
-    static private final String JULY = _resource.getString("DatePicker","July"); 
+    static private final String JULY = _resource.getString("DatePicker","July");
     static private final String AUGUST = _resource.getString("DatePicker","August");
     static private final String SEPTEMBER = _resource.getString("DatePicker","September");
     static private final String OCTOBER = _resource.getString("DatePicker","October");
@@ -61,12 +70,12 @@ class DatePicker extends JPanel implements SuiConstants {
 
     public DatePicker(Calendar calendar) {
         this.calendar = calendar;
-        String months[] = { 
-            JANUARY, 
-            FEBRUARY, 
-            MARCH, 
+        String months[] = {
+            JANUARY,
+            FEBRUARY,
+            MARCH,
             APRIL,
-            MAY, 
+            MAY,
             JUNE,
             JULY,
             AUGUST,
@@ -78,15 +87,15 @@ class DatePicker extends JPanel implements SuiConstants {
 
         monthField.getAccessibleContext().setAccessibleDescription(_resource.getString("DatePicker","month"));
         yearField.getAccessibleContext().setAccessibleDescription(_resource.getString("DatePicker","year"));
-        
+
         GridBagLayout gridbag = new GridBagLayout();
         GridBagConstraints c = new GridBagConstraints();
         setLayout(gridbag);
-        
+
         GridBagUtil.constrain(this, monthField, 0, 0, 1, 1, 0.0, 0.0,
                               GridBagConstraints.NORTHWEST, GridBagConstraints.BOTH,
                               0, 0, COMPONENT_SPACE, COMPONENT_SPACE);
-        
+
         GridBagUtil.constrain(this, yearField, 1, 0, 1, 1, 0.0, 0.0,
                 GridBagConstraints.NORTHWEST, GridBagConstraints.BOTH,
                 0, 0, COMPONENT_SPACE, 0);
@@ -120,7 +129,7 @@ class DatePicker extends JPanel implements SuiConstants {
     }
 
     int getIntFromString(String text) {
-        Integer integer = new Integer(text);
+        Integer integer = Integer.valueOf(text);
         return integer.intValue();
     }
 
